[metadata]
name = forum
version = 0.0.1
author = dafine
license = GNU GPLv3
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10

[options]
packages =
    find:
install_requires =
    mysql-connector-python>=8.0.27
    pysimplegui >= 4.60.4
python_requires = >=3.10
package_dir =
    =src
zip_safe = no

[options.packages.find]
where = src